header/header_cont/language terminato

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
     <title>html-hubspot</title>
   </head>
@@ -12,7 +13,24 @@
 <!-- /* QUI COMINCIA L'header */ -->
 
     <div class="header">
-        <div class="header_cont"></div>
+        <div class="header_cont">
+            <div class="language">
+              <i class="fas fa-globe"></i>
+              <p>Language</p>
+              <i class="fas fa-angle-down"></i>
+
+
+
+            </div>
+
+            <div class="tel">
+
+            </div>
+
+            <div class="sign">
+
+            </div>
+        </div>
     </div>
 
 <!-- /* QUI COMINCIA IL nav */ -->
