--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
               <i class="fas fa-globe"></i>
               <p>Language</p>
               <i class="fas fa-angle-down"></i>
-
-
-
             </div>
 
             <div class="tel">
-
+              <p><strong>Sales:</strong>+353 1 512 4400</p>
             </div>
+
+
+
+
 
             <div class="sign">
 
