--- a/index.html
+++ b/index.html
@@ -14,23 +14,35 @@
 
     <div class="header">
         <div class="header_cont">
-            <div class="language">
+            <div class="language fl_lft">
               <i class="fas fa-globe"></i>
               <p>Language</p>
-              <i class="fas fa-angle-down"></i>
+              <a href="#">
+                <i class="fas fa-angle-down"> </i>
+              </a>
             </div>
 
-            <div class="tel">
+
+            <div class="tel fl_lft">
               <p><strong>Sales:</strong>+353 1 512 4400</p>
             </div>
 
 
+            <div class="sign fl_rgt">
+              <div class="orange_botton fl_rgt">
+                <a href="#">Get HubSpot Free</a>
+              </div>
 
+              <div class="white_botton fl_rgt">
+                <a href="#">Sign In</a>
+              </div>
 
-
-            <div class="sign">
 
             </div>
+
+
+
+
         </div>
     </div>
 
