--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <a href="#">Sign In</a>
               </div>
 
+              <i class="fas fa-search"></i>
+
 
             </div>
 
