--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div class="header">
         <div class="header_cont">
+<!-- Section language -->
             <div class="language fl_lft">
               <i class="fas fa-globe"></i>
               <p>Language</p>
@@ -21,87 +22,105 @@
                 <i class="fas fa-angle-down"> </i>
               </a>
             </div>
-
-
+<!-- Section tel -->
             <div class="tel fl_lft">
               <p><strong>Sales:</strong>+353 1 512 4400</p>
             </div>
-
-
+<!-- Section sign -->
             <div class="sign fl_rgt">
               <div class="orange_botton fl_rgt">
                 <a href="#">Get HubSpot Free</a>
               </div>
-
               <div class="white_botton fl_rgt">
                 <a href="#">Sign In</a>
               </div>
-
               <i class="fas fa-search"></i>
-
-
             </div>
-
-
-
-
         </div>
     </div>
 
-<!-- /* QUI COMINCIA IL nav */ -->
+      <!-- /* QUI COMINCIA IL nav */ -->
 
     <div class="nav">
-      <div class="nav_cont"></div>
+      <div class="nav_cont">
+        <div class="logo">
+          <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt="">
+        </div>
+        <div class="menu">
+          <a href="#">
+            <i class="fas fa-angle-down"> </i>
+          </a>
+          <p>About</p>
+          <a href="#">
+            <i class="fas fa-angle-down"> </i>
+          </a>
+          <p>Partners</p>
+          <a href="#">
+            <i class="fas fa-angle-down"> </i>
+          </a>
+          <p>Resources</p>
+          <a href="#">
+            <i class="fas fa-angle-down"> </i>
+          </a>
+          <p>Pricing</p>
+          <a href="#">
+            <i class="fas fa-angle-down"> </i>
+          </a>
+          <p>Software</p>
+        </div>
+      </div>
     </div>
 
-<!-- /* QUI COMINCIA LA bar_blue */ -->
-
-    <div class="bar_blue">
-      <div class="bar_cont"></div>
-    </div>
-
-<!-- /* QUI COMINCIA top */ -->
-
-    <div class="top">
-      <div class="top_cont"></div>
-    </div>
-
-<!-- /* QUI COMINCIA middle */ -->
-
-    <div class="middle">
-      <div class="middle_cont"></div>
-    </div>
-
-
-<!-- /* QUI COMINCIA green_table */ -->
-
-    <div class="green_table">
-      <div class="green_cont"></div>
-    </div>
-
-<!-- /* QUI COMINCIA partners */ -->
-
-    <div class="partners">
-      <div class="partners_cont"></div>
-    </div>
-
-<!-- /* QUI COMINCIA foto_part */ -->
-
-    <div class="foto_part">
-      <div class="foto_cont"></div>
-    </div>
-
-<!-- /* QUI COMINCIA footer */ -->
-
-    <div class="footer">
-      <div class="footer_cont"></div>
-    </div>
+    <!-- /* QUI COMINCIA LA bar_blue */ -->
 
 
 
+      <div class="bar_blue">
+        <div class="bar_cont"></div>
+      </div>
+
+      <!-- /* QUI COMINCIA top */ -->
+
+      <div class="top">
+        <div class="top_cont"></div>
+      </div>
+
+      <!-- /* QUI COMINCIA middle */ -->
+
+      <div class="middle">
+        <div class="middle_cont"></div>
+      </div>
+
+
+      <!-- /* QUI COMINCIA green_table */ -->
+
+      <div class="green_table">
+        <div class="green_cont"></div>
+      </div>
+
+      <!-- /* QUI COMINCIA partners */ -->
+
+      <div class="partners">
+        <div class="partners_cont"></div>
+      </div>
+
+      <!-- /* QUI COMINCIA foto_part */ -->
+
+      <div class="foto_part">
+        <div class="foto_cont"></div>
+      </div>
+
+      <!-- /* QUI COMINCIA footer */ -->
+
+      <div class="footer">
+        <div class="footer_cont"></div>
+      </div>
 
 
 
 
-  </body>
-</html>
+
+
+
+    </body>
+    </html>
