Blue bar terminata

--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
 
 
       <div class="bar_blue">
-        <div class="bar_cont"></div>
+        <div class="bar_cont">
+          <div class="bar_notice">
+            <p>Missed the latest product announcements made at INBOUND 2018? Catch up on all that’s new to help your business grow better.</p>
+          </div>
+          <div class="learn">
+            <div class="btm_learn">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+
       </div>
 
       <!-- /* QUI COMINCIA top */ -->
