modifica btn_learn

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div class="nav">
       <div class="nav_cont">
         <div class="logo">
-          <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt="">
+        <a href="#">
+          <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt=""></a>
         </div>
         <div class="menu">
           <a href="#">
@@ -82,10 +83,13 @@
           </div>
           <div class="learn">
             <div class="btm_learn">
-              <a href="#">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
           </div>
         </div>
+      </div>
+
+
 
 
       </div>
