correzione errore btn_bluebar

--- a/index.html
+++ b/index.html
@@ -83,15 +83,10 @@
           </div>
           <div class="learn">
             <div class="btm_learn">
-                <a href="#">Learn More</a>
+                <a href="#" id="btn_bluebar" >Learn More</a>
             </div>
           </div>
         </div>
-      </div>
-
-
-
-
       </div>
 
       <!-- /* QUI COMINCIA top */ -->
