--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <!-- /* QUI COMINCIA LA bar_blue */ -->
+<!-- /* QUI COMINCIA LA bar_blue */ -->
 
 
 
@@ -83,19 +83,28 @@
           </div>
           <div class="learn">
             <div class="btm_learn">
-                <a href="#" id="btn_bluebar" >Learn More</a>
+                <a href="#" class="btn">Learn More</a>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- /* QUI COMINCIA top */ -->
+<!-- /* QUI COMINCIA top */ -->
 
       <div class="top">
-        <div class="top_cont"></div>
+        <div class="top_cont">
+          <div class="top_left_cont">
+            <h1>There’s a better way to grow.</h1>
+            <p id="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong>“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
+            <a href="#" class="btn" >Get HubSpot Free</a>
+            <p id="paragrafo_bottom">Get started with <strong>FREE</strong> tools, and upgrade<br>as you grow.</p>
+          </div>
+        </div>
       </div>
 
-      <!-- /* QUI COMINCIA middle */ -->
+<!-- /* QUI COMINCIA middle */ -->
+
+
 
       <div class="middle">
         <div class="middle_cont"></div>
