inizio middle_section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="top_cont">
           <div class="top_left_cont">
             <h1>There’s a better way to grow.</h1>
-            <p id="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong>“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
-            <a href="#" class="btn" >Get HubSpot Free</a>
+            <p id="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong class="strong_blue">“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
+            <a href="#">Get HubSpot Free</a>
             <p id="paragrafo_bottom">Get started with <strong>FREE</strong> tools, and upgrade<br>as you grow.</p>
           </div>
         </div>
@@ -107,8 +107,19 @@
 
 
       <div class="middle">
-        <div class="middle_cont"></div>
-      </div>
+        <div class="middle_cont">
+          	<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525">
+						<h1>Powerful alone. Better together.</h1>
+						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+<div class="middle_section1">
+
+</div>
+
+
+
+				</div>
+			</div>
+
 
 
       <!-- /* QUI COMINCIA green_table */ -->
