--- a/index.html
+++ b/index.html
@@ -111,9 +111,13 @@
           	<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525">
 						<h1>Powerful alone. Better together.</h1>
 						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
-<div class="middle_section1">
+				<div class="middle_section1 box_shadow"></div>
+				<div class="cont_middlesection2">
+					<div class="box1 fl_lft box_shadow"></div>
+					<div class="box2 fl_lft box_shadow"></div>
+					<div class="box3 fl_rgt box_shadow"></div>
 
-</div>
+				</div>
 
 
 
