--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-      <!-- /* QUI COMINCIA IL nav */ -->
+<!-- /* QUI COMINCIA IL nav */ -->
 
     <div class="nav">
       <div class="nav_cont">
@@ -95,9 +95,9 @@
         <div class="top_cont">
           <div class="top_left_cont">
             <h1>There’s a better way to grow.</h1>
-            <p id="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong class="strong_blue">“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
+            <p class="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong class="strong_blue">“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
             <a href="#">Get HubSpot Free</a>
-            <p id="paragrafo_bottom">Get started with <strong>FREE</strong> tools, and upgrade<br>as you grow.</p>
+            <p class="paragrafo_bottom">Get started with FREE tools, and upgrade as you grow.</p>
           </div>
         </div>
       </div>
@@ -106,23 +106,23 @@
 
 
 
-      <div class="middle">
+    <div class="middle">
         <div class="middle_cont">
           	<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525">
 						<h1>Powerful alone. Better together.</h1>
 						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
-				<div class="middle_section1 box_shadow"></div>
-				<div class="cont_middlesection2">
-					<div class="box1 fl_lft box_shadow"></div>
-					<div class="box2 fl_lft box_shadow"></div>
-					<div class="box3 fl_rgt box_shadow"></div>
-
-				</div>
-
+						<div class="middle_section1 box_shadow"></div>
+						<div class="cont_middlesection2">
+						  <div class="box1 fl_lft box_shadow"></div>
+						  <div class="box2 fl_lft box_shadow"></div>
+						  <div class="box3 fl_rgt box_shadow"></div>
+            </div>
 
 
-				</div>
+
+
 			</div>
+		</div>
 
 
 
@@ -141,7 +141,16 @@
       <!-- /* QUI COMINCIA foto_part */ -->
 
       <div class="foto_part">
-        <div class="foto_cont"></div>
+      <div class="foto_cont">
+        <div class="foto_part_text fl_lft">
+<h1>Start Growing With HubSpot Today</h1>
+<p class="paragrafo_top">With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+<a href="#">Get HubSpot Free</a>
+<p class="paragrafo_bottom">Get started with FREE tools, or get more with our premium software.</p>
+
+        </div>
+
+      </div>
       </div>
 
       <!-- /* QUI COMINCIA footer */ -->
