foto_part terminato

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
     <title>html-hubspot</title>
@@ -93,11 +93,11 @@
 
       <div class="top">
         <div class="top_cont">
-          <div class="top_left_cont">
-            <h1>There’s a better way to grow.</h1>
-            <p class="paragrafo_top">Marketing, sales, and service software that helps your business grow without compromise. Because <strong class="strong_blue">“good for the business”</strong>should also mean <strong>“good for the customer.”</strong></p>
+          <div class="half_topcont">
+            <h1 class="big_title">There’s a better <br>way to grow</h1>
+            <p class="paragrafo_superiore">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
             <a href="#">Get HubSpot Free</a>
-            <p class="paragrafo_bottom">Get started with FREE tools, and upgrade as you grow.</p>
+            <p class="paragrafo_inferiore">Get started with FREE tools, and upgrade as you grow</p>
           </div>
         </div>
       </div>
@@ -109,20 +109,16 @@
     <div class="middle">
         <div class="middle_cont">
           	<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525">
-						<h1>Powerful alone. Better together.</h1>
-						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+						<h1 class="titolo">Powerful alone. Better together.</h1>
+						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.<br>They’re powerful alone — but even better when used together.</p>
 						<div class="middle_section1 box_shadow"></div>
 						<div class="cont_middlesection2">
 						  <div class="box1 fl_lft box_shadow"></div>
 						  <div class="box2 fl_lft box_shadow"></div>
 						  <div class="box3 fl_rgt box_shadow"></div>
             </div>
-
-
-
-
-			</div>
-		</div>
+        </div>
+    </div>
 
 
 
@@ -142,15 +138,22 @@
 
       <div class="foto_part">
       <div class="foto_cont">
-        <div class="foto_part_text fl_lft">
-<h1>Start Growing With HubSpot Today</h1>
-<p class="paragrafo_top">With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
-<a href="#">Get HubSpot Free</a>
-<p class="paragrafo_bottom">Get started with FREE tools, or get more with our premium software.</p>
-
+        <div class="foto_part_half fl_lft">
+          <h1 class="titolo">Start Growing With <br>HubSpot Today</h1>
+          <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+          <a href="#">Get HubSpot Free</a>
+          <p class="paragrafo_inferiore">Get started with FREE tools, or get more with our premium software.</p>
+        </div>
+        <div class="foto_part_half fl_rgt">
+          <div class="foto_circle">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CTA_Card_profile_1@2x.png?t=1536304467412">
+          </div>
         </div>
 
-      </div>
+
+
+
+
       </div>
 
       <!-- /* QUI COMINCIA footer */ -->
