--- a/index.html
+++ b/index.html
@@ -125,13 +125,70 @@
       <!-- /* QUI COMINCIA green_table */ -->
 
       <div class="green_table">
-        <div class="green_cont"></div>
+        <div class="green_cont">
+          <div class="green_text">
+            <h1 class="titolo">Learn and grow with award-winning support <br> and a thriving community behind you.</h1>
+            <p class="paragrafo_superiore">You don't have to go it alone. Master the inbound methodology and get the most out of your <br>tools with HubSpot's legendary customer support team and a community of thousands of  <br>marketing and sales pros just like you.</p>
+          </div>
+<div class="green_grid">
+
+<div class="lft_grid-top inside-element_grid fl_lft border_rgt"></div>
+
+<div class="lft_center_grid-top inside-element_grid fl_lft border_rgt"></div>
+
+<div class="rgt_center_grid-top  inside-element_grid fl_lft border_rgt"></div>
+
+<div class="rgt_grid-top inside-element_grid fl_lft"></div>
+
+<div class="lft_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
+
+<div class="lft_center_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
+
+<div class="rgt_center_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
+
+<div class="rgt_grid-bottom inside-element_grid fl_lft border_top"></div>
+
+</div>
+        </div>
       </div>
 
       <!-- /* QUI COMINCIA partners */ -->
 
       <div class="partners">
-        <div class="partners_cont"></div>
+        <div class="partners_cont">
+          <div class="lft_partners fl_lft">
+          <h1 class="big_title">_<br>48,000</h1>
+          <p class="paragrafo_superiore">customers in over 100 countries growing their businesses with HubSpot</p>
+          </div>
+          <div class="rgt-top_partners fl_lft">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/shopify.png?t=1536251953627">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/usabilia.png?t=1536251953627">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/tufts.png?t=1536251953627" alt="">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/iadvize.png?t=1536251953627" alt="">
+          </div>
+
+          <div class="rgt-bottom_partners fl_lft">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/mention.png?t=1536251953627">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/care.png?t=1536251953627">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/scrive.png?t=1536251953627" alt="">
+
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/shoretel.png?t=1536251953627" alt="">
+
+          </div>
+
+
+
+
+
+
+          </div>
+        </div>
       </div>
 
       <!-- /* QUI COMINCIA foto_part */ -->
