Correzione Esercizio/topbar

--- a/index.html
+++ b/index.html
@@ -6,224 +6,28 @@
     <link <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
-    <title>html-hubspot</title>
+    <title>hubspot</title>
   </head>
-  <body>
-
-<!-- /* QUI COMINCIA L'header */ -->
-
-    <div class="header">
-        <div class="header_cont">
-<!-- Section language -->
-            <div class="language fl_lft">
-              <i class="fas fa-globe"></i>
-              <p>Language</p>
-              <a href="#">
-                <i class="fas fa-angle-down"> </i>
-              </a>
-            </div>
-<!-- Section tel -->
-            <div class="tel fl_lft">
-              <p><strong>Sales:</strong>+353 1 512 4400</p>
-            </div>
-<!-- Section sign -->
-            <div class="sign fl_rgt">
-              <div class="orange_botton fl_rgt">
-                <a href="#">Get HubSpot Free</a>
-              </div>
-              <div class="white_botton fl_rgt">
-                <a href="#">Sign In</a>
-              </div>
-              <i class="fas fa-search"></i>
-            </div>
-        </div>
-    </div>
-
-<!-- /* QUI COMINCIA IL nav */ -->
-
-    <div class="nav">
-      <div class="nav_cont">
-        <div class="logo">
-        <a href="#">
-          <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt=""></a>
-        </div>
-        <div class="menu">
-          <a href="#">
-            <i class="fas fa-angle-down"> </i>
-          </a>
-          <p>About</p>
-          <a href="#">
-            <i class="fas fa-angle-down"> </i>
-          </a>
-          <p>Partners</p>
-          <a href="#">
-            <i class="fas fa-angle-down"> </i>
-          </a>
-          <p>Resources</p>
-          <a href="#">
-            <i class="fas fa-angle-down"> </i>
-          </a>
-          <p>Pricing</p>
-          <a href="#">
-            <i class="fas fa-angle-down"> </i>
-          </a>
-          <p>Software</p>
-        </div>
-      </div>
-    </div>
-
-<!-- /* QUI COMINCIA LA bar_blue */ -->
-
-
-
-      <div class="bar_blue">
-        <div class="bar_cont">
-          <div class="bar_notice">
-            <p>Missed the latest product announcements made at INBOUND 2018? Catch up on all that’s new to help your business grow better.</p>
+    <body>
+      <div class="topbar">
+        <div class="container">
+          <div class="topbar-left">
+            <i class="fas fa-globe"></i>
+            <a href="#" class="color-blue">English</a>
+            <a href="#"><i class="fas fa-caret-down"></i></a>
+            <span style="color: lightgrey">|</span>
+            <a href="#" class="color-blue">Sales: +35315124400</a>
+            <!-- <i class="fas fa-caret-down prova"></i> -->
+            <a href="#"><i class="fas fa-caret-down"></i></a>
           </div>
-          <div class="learn">
-            <div class="btm_learn">
-                <a href="#" class="btn">Learn More</a>
-            </div>
+          <div class="topbar-right">
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#" class="btn bkr-white color-orange btn-border">Log in</a>
+            <a href="#" class="btn bkr-orange color-white">Get HubSpot free</a>
           </div>
         </div>
       </div>
-
-<!-- /* QUI COMINCIA top */ -->
-
-      <div class="top">
-        <div class="top_cont">
-          <div class="half_topcont">
-            <h1 class="big_title">There’s a better <br>way to grow</h1>
-            <p class="paragrafo_superiore">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-            <a href="#">Get HubSpot Free</a>
-            <p class="paragrafo_inferiore">Get started with FREE tools, and upgrade as you grow</p>
-          </div>
-        </div>
-      </div>
-
-<!-- /* QUI COMINCIA middle */ -->
-
-
-
-    <div class="middle">
-        <div class="middle_cont">
-          	<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525">
-						<h1 class="titolo">Powerful alone. Better together.</h1>
-						<p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.<br>They’re powerful alone — but even better when used together.</p>
-						<div class="middle_section1 box_shadow"></div>
-						<div class="cont_middlesection2">
-						  <div class="box1 fl_lft box_shadow"></div>
-						  <div class="box2 fl_lft box_shadow"></div>
-						  <div class="box3 fl_rgt box_shadow"></div>
-            </div>
-        </div>
-    </div>
-
-
-
-      <!-- /* QUI COMINCIA green_table */ -->
-
-      <div class="green_table">
-        <div class="green_cont">
-          <div class="green_text">
-            <h1 class="titolo">Learn and grow with award-winning support <br> and a thriving community behind you.</h1>
-            <p class="paragrafo_superiore">You don't have to go it alone. Master the inbound methodology and get the most out of your <br>tools with HubSpot's legendary customer support team and a community of thousands of  <br>marketing and sales pros just like you.</p>
-          </div>
-<div class="green_grid">
-
-<div class="lft_grid-top inside-element_grid fl_lft border_rgt"></div>
-
-<div class="lft_center_grid-top inside-element_grid fl_lft border_rgt"></div>
-
-<div class="rgt_center_grid-top  inside-element_grid fl_lft border_rgt"></div>
-
-<div class="rgt_grid-top inside-element_grid fl_lft"></div>
-
-<div class="lft_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
-
-<div class="lft_center_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
-
-<div class="rgt_center_grid-bottom inside-element_grid fl_lft border_top border_rgt"></div>
-
-<div class="rgt_grid-bottom inside-element_grid fl_lft border_top"></div>
-
-</div>
-        </div>
-      </div>
-
-      <!-- /* QUI COMINCIA partners */ -->
-
-      <div class="partners">
-        <div class="partners_cont">
-          <div class="lft_partners fl_lft">
-          <h1 class="big_title">_<br>48,000</h1>
-          <p class="paragrafo_superiore">customers in over 100 countries growing their businesses with HubSpot</p>
-          </div>
-          <div class="rgt-top_partners fl_lft">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/shopify.png?t=1536251953627">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/usabilia.png?t=1536251953627">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/tufts.png?t=1536251953627" alt="">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/iadvize.png?t=1536251953627" alt="">
-          </div>
-
-          <div class="rgt-bottom_partners fl_lft">
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/mention.png?t=1536251953627">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/care.png?t=1536251953627">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/scrive.png?t=1536251953627" alt="">
-
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/shoretel.png?t=1536251953627" alt="">
-
-          </div>
-
-
-
-
-
-
-          </div>
-        </div>
-      </div>
-
-      <!-- /* QUI COMINCIA foto_part */ -->
-
-      <div class="foto_part">
-      <div class="foto_cont">
-        <div class="foto_part_half fl_lft">
-          <h1 class="titolo">Start Growing With <br>HubSpot Today</h1>
-          <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
-          <a href="#">Get HubSpot Free</a>
-          <p class="paragrafo_inferiore">Get started with FREE tools, or get more with our premium software.</p>
-        </div>
-        <div class="foto_part_half fl_rgt">
-          <div class="foto_circle">
-            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CTA_Card_profile_1@2x.png?t=1536304467412">
-          </div>
-        </div>
-
-
-
-
-
-      </div>
-
-      <!-- /* QUI COMINCIA footer */ -->
-
-      <div class="footer">
-        <div class="footer_cont"></div>
-      </div>
-
-
-
-
-
 
 
     </body>
-    </html>
+  </html>
