Correzione Esercizio/header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 
     <body>
+
+<!-- TOPBAR -->
       <div class="topbar">
         <div class="container">
           <div class="topbar-left">
@@ -22,11 +24,44 @@
           </div>
           <div class="topbar-right">
             <a href="#"><i class="fas fa-search"></i></a>
-            <a href="#" class="btn bkr-white color-orange btn-border">Log in</a>
+            <a href="#" class="btn bkr-white color-orange btn-border">Sign in</a>
             <a href="#" class="btn bkr-orange color-white">Get HubSpot free</a>
           </div>
         </div>
       </div>
+
+<!-- HEADER -->
+<header>
+  <div class="container">
+    <div class="header-left">
+      <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt="">
+    </div>
+    <div class="header-right">
+      <ul>
+        <li>
+          <a href="#" class="color-blue">Software</a>
+        </li>
+          <a href="#"><i class="fas fa-caret-down"></i></a>
+        <li>
+          <a href="#"class="color-blue">Pricing</a>
+        </li>
+        <li>
+          <a href="#"class="color-blue">Resources</a>
+        </li>
+          <a href="#"><i class="fas fa-caret-down"></i></a>
+        <li>
+          <a href="#"class="color-blue">Partners</a>
+        </li>
+          <a href="#"><i class="fas fa-caret-down"></i></a>
+        <li>
+          <a href="#"class="color-blue">About</a>
+        </li>
+          <a href="#"><i class="fas fa-caret-down"></i></a>
+      </ul>
+    </div>
+  </div>
+
+</header>
 
 
     </body>
