Correzione Esercizio/disclaimer

--- a/index.html
+++ b/index.html
@@ -31,37 +31,49 @@
       </div>
 
 <!-- HEADER -->
-<header>
-  <div class="container">
-    <div class="header-left">
-      <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt="">
-    </div>
-    <div class="header-right">
-      <ul>
-        <li>
-          <a href="#" class="color-blue">Software</a>
-        </li>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
-        <li>
-          <a href="#"class="color-blue">Pricing</a>
-        </li>
-        <li>
-          <a href="#"class="color-blue">Resources</a>
-        </li>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
-        <li>
-          <a href="#"class="color-blue">Partners</a>
-        </li>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
-        <li>
-          <a href="#"class="color-blue">About</a>
-        </li>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
-      </ul>
-    </div>
-  </div>
+      <header>
+        <div class="container">
+          <div class="header-left">
+            <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg?t=1536209279849" alt="">
+          </div>
+          <div class="header-right">
+            <ul>
+              <li>
+                <a href="#" class="color-blue">Software</a>
+              </li>
+                <a href="#"><i class="fas fa-caret-down"></i></a>
+              <li>
+                <a href="#"class="color-blue">Pricing</a>
+              </li>
+              <li>
+                <a href="#"class="color-blue">Resources</a>
+              </li>
+                <a href="#"><i class="fas fa-caret-down"></i></a>
+              <li>
+                <a href="#"class="color-blue">Partners</a>
+              </li>
+                <a href="#"><i class="fas fa-caret-down"></i></a>
+              <li>
+                <a href="#"class="color-blue">About</a>
+              </li>
+                <a href="#"><i class="fas fa-caret-down"></i></a>
+            </ul>
+          </div>
+        </div>
+      </header>
 
-</header>
+<!-- DISCLAIMER -->
+        <div class="disclaimer bkr-blue">
+          <div class="container">
+            <div class="disclaimer-left">
+              <p class="color-white"> <i>The Growth Show </i>is back with a brand new season! Tune in now for new episodes of HubSpot’s signature podcast.</p>
+            </div>
+            <div class="disclaimer-right">
+              <a href="#" class="bkr-white color-blue">Listen now</a>
+            </div>
+          </div>
+        </div>
+
 
 
     </body>
