--- a/index.html
+++ b/index.html
@@ -86,6 +86,35 @@
   </div>
 </div>
 
+<!-- SECTION -->
+<div class="section">
+  <div class="container">
+
+    <div class="section-top">
+<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525" alt="">
+<h1 class="color-blue">Powerful alone. Better together.</h1>
+<p class="color-blue">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.<br>They’re powerful alone — but even better when used together.</p>
+    </div>
+
+    <div class="section-middle">
+<div class="section-middle-left">
+<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg?t=1536223696525" alt="">
+<a href="#" class=" btn color-white bkr-orange">Learn more</a>
+</div>
+
+<div class="section-middle-right">
+
+</div>
+    </div>
+
+    <div class="section-bottom">
+
+    </div>
+
+  </div>
+
+</div>
+
 
 
 
