--- a/index.html
+++ b/index.html
@@ -103,7 +103,25 @@
 </div>
 
 <div class="section-middle-right">
+<div class="content-middle-right-wrapper">
 
+  <h3 class="color-blue">Free HubSpot CRM</h3>
+  <p class="color-blue">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+  <span class="color-blue">POPULAR FEATURES</span>
+  <ul>
+    <li><i class="fas fa-check-circle color-orange"></i></li>
+    <li class="color-blue li-circle">Contact Insights</li>
+
+
+    <li><i class="fas fa-check-circle color-orange"></i></li>
+    <li class="color-blue li-circle">Deals</li>
+
+
+    <li><i class="fas fa-check-circle color-orange"></i></li>
+    <li class="color-blue li-circle">Tasks</li>
+
+  </ul>
+</div>
 </div>
     </div>
 
