Correzione Esercizio/section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>hubspot</title>
   </head>
 
-    <body>
+  <body>
 
 <!-- TOPBAR -->
       <div class="topbar">
@@ -75,66 +75,171 @@
         </div>
 
 <!-- JUMBO -->
-<div class="jumbo">
-  <div class="container">
-    <div class="jumbo-left">
-      <h1 class="color-white">There’s a better <br>way to grow.</h1>
-      <p class="color-white">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-      <a href="#" class="btn-big bkr-white color-blue">Get HubSpot free</a>
-      <p class="color-white">Get started with FREE tools, and upgrade as you grow.</p>
-    </div>
-  </div>
-</div>
+        <div class="jumbo">
+          <div class="container">
+            <div class="jumbo-left">
+              <h1 class="color-white">There’s a better <br>way to grow.</h1>
+              <p class="color-white">Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+              <a href="#" class="btn-big bkr-white color-blue">Get HubSpot free</a>
+              <p class="color-white">Get started with FREE tools, and upgrade as you grow.</p>
+            </div>
+          </div>
+        </div>
 
 <!-- SECTION -->
-<div class="section">
-  <div class="container">
+        <div class="section">
+            <div class="container">
 
-    <div class="section-top">
-<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525" alt="">
-<h1 class="color-blue">Powerful alone. Better together.</h1>
-<p class="color-blue">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.<br>They’re powerful alone — but even better when used together.</p>
-    </div>
+        <!-- TOP -->
+            <div class="section-top">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png?t=1536223696525" alt="">
+              <h1 class="color-blue">Powerful alone. Better together.</h1>
+              <p class="color-blue">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.<br>They’re powerful alone — but even better when used together.</p>
+            </div>
 
-    <div class="section-middle">
-<div class="section-middle-left">
-<img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg?t=1536223696525" alt="">
-<a href="#" class=" btn color-white bkr-orange">Learn more</a>
-</div>
+        <!-- MIDDLE -->
+            <div class="section-middle bkr-white">
+              <div class="section-middle-left">
+                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg?t=1536223696525" alt="">
+                <a href="#" class=" btn color-white bkr-orange">Learn more</a>
+              </div>
+              <div class="section-middle-right">
+                <div class="content-middle-right-wrapper">
+                  <h3 class="color-blue">Free HubSpot CRM</h3>
+                  <p class="color-blue">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                  <span class="color-blue">POPULAR FEATURES</span>
+                  <ul>
+                    <li class="color-blue">
+                      <i class="fas fa-check-circle color-orange"></i>
+                      Contact Insights
+                    </li>
 
-<div class="section-middle-right">
-<div class="content-middle-right-wrapper">
+                    <li class="color-blue">
+                      <i class="fas fa-check-circle color-orange"></i>
+                      Deals
+                    </li>
 
-  <h3 class="color-blue">Free HubSpot CRM</h3>
-  <p class="color-blue">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
-  <span class="color-blue">POPULAR FEATURES</span>
-  <ul>
-    <li><i class="fas fa-check-circle color-orange"></i></li>
-    <li class="color-blue li-circle">Contact Insights</li>
+                    <li class="color-blue">
+                      <i class="fas fa-check-circle color-orange"></i>
+                      Tasks
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
 
+            <!-- BOTTOM -->
+            <div class="section-bottom">
+              <div class="section-bottom-left bkr-white">
+                <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg?t=1536239313829" alt="">
+                <h3 class="color-blue">Marketing Hub</h3>
+                <p class="color-blue">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                <hr>
+                <span class="color-blue">POPULAR FEATURES</span>
+                <ul>
 
-    <li><i class="fas fa-check-circle color-orange"></i></li>
-    <li class="color-blue li-circle">Deals</li>
-
-
-    <li><i class="fas fa-check-circle color-orange"></i></li>
-    <li class="color-blue li-circle">Tasks</li>
-
-  </ul>
-</div>
-</div>
-    </div>
-
-    <div class="section-bottom">
-
-    </div>
-
-  </div>
-
-</div>
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Contact Insights
+                  </li>
 
 
 
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Deals
+                  </li>
 
-    </body>
-  </html>
+
+
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Tasks
+                  </li>
+
+                </ul>
+              </div>
+              <div class="section-bottom-center bkr-white">
+                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg?t=1536239313829" alt="">
+                <h3 class="color-blue">Sales Hub</h3>
+                <p class="color-blue">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                <hr>
+                <span class="color-blue">POPULAR FEATURES</span>
+                <ul>
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Contact Insights
+                  </li>
+
+
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Deals
+                  </li>
+
+
+
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Tasks
+                  </li>
+
+                </ul>
+              </div>
+              <div class="section-bottom-right bkr-white">
+                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg?t=1536239313829" alt="">
+                <h3 class="color-blue">Service Hub</h3>
+                <p  class="color-blue">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                <hr>
+                <span class="color-blue">POPULAR FEATURES</span>
+                <ul>
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Contact Insights
+                  </li>
+
+
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Deals
+                  </li>
+
+
+
+
+                  <li class="color-blue">
+                    <i class="fas fa-check-circle color-orange"></i>
+                    Tasks
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </body>
+</html>
