--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
             <!-- BOTTOM -->
             <div class="section-bottom">
+
               <div class="section-bottom-left bkr-white">
                 <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg?t=1536239313829" alt="">
                 <h3 class="color-blue">Marketing Hub</h3>
@@ -159,7 +160,11 @@
                   </li>
 
                 </ul>
+                <div class="btn-bottom">
+                  <a href="#" class="btn color-white bkr-orange">Learn more</a>
+                </div>
               </div>
+
               <div class="section-bottom-center bkr-white">
                 <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg?t=1536239313829" alt="">
                 <h3 class="color-blue">Sales Hub</h3>
@@ -189,7 +194,11 @@
                   </li>
 
                 </ul>
+                <div class="btn-bottom">
+                  <a href="#" class="btn color-white bkr-orange">Learn more</a>
+                </div>
               </div>
+
               <div class="section-bottom-right bkr-white">
                 <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg?t=1536239313829" alt="">
                 <h3 class="color-blue">Service Hub</h3>
@@ -219,6 +228,9 @@
                   </li>
 
                 </ul>
+                <div class="btn-bottom">
+                  <a href="#" class="btn color-white bkr-orange">Learn more</a>
+                </div>
               </div>
             </div>
           </div>
