--- a/index.html
+++ b/index.html
@@ -236,6 +236,110 @@
           </div>
         </div>
 
+<!-- GRID -->
+<div class="grid">
+  <div class="container">
+    <div class="grid-title">
+      <h2 class="color-white">Learn and grow with award-winning support <br>and a thriving community behind you.</h2>
+      <p class="color-white">You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+    </div>
+    <div class="grid-table">
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg?t=1536245174958" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg?t=1536245174958" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg?t=1536249389065" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg?t=1536249389065" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg?t=1536249389065" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg?t=1536249389065" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg?t=1536249389065" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div>
+          <img src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg?t=1536249389065" id="trentatre" alt="">
+          <div class="titolo-tabella">
+            <span>150</span>
+          </div>
+          <div class="sottotitolo-tabella">
+            <span>HubSpot user groups</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
 
